Fix the merge of the patch for Bug#30217.